<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvCareApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="34sp"
            android:fontFamily="@font/poppins_bold"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="17sp"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:shadowDy="3"
            android:shadowColor="@color/colorShadow"
            android:text="@string/the_caremm"/>
        <TextView
            android:id="@+id/tvPatientApp"
            android:text="@string/patient_app"
            android:layout_below="@id/tvCareApp"
            android:layout_centerHorizontal="true"
            android:shadowRadius="1"
            android:shadowDy="3"
            android:shadowColor="@color/colorShadow"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="9sp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/group"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_below="@id/tvPatientApp"/>
        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="38dp"
            android:paddingStart="15dp"
            android:fontFamily="@font/poppins_regular"
            android:paddingEnd="15dp"
            android:layout_below="@id/ivPoster"
            android:backgroundTint="@color/white"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/enter_phone_number"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="17dp"
            android:paddingStart="15dp"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_regular"
            android:paddingEnd="15dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/rounded_edit_text"
            android:layout_below="@id/etPhoneNumber"
            android:hint="@string/enter_password"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="17dp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorPrimary"
            android:layout_below="@id/etPassword"/>
        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="13dp"
            android:textColor="@color/colorText"
            android:text="@string/forget_password"/>

        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/btnFBLogin"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="21dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/colorFB"
            android:textAlignment="center"
            app:icon="@drawable/apple"
            app:iconGravity="textStart"
            android:layout_below="@id/tvForgetPassword"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in_fb"
            android:textAllCaps="false" />-->
            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFBLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="21dp"
                android:background="@drawable/rounded_button"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:backgroundTint="@color/colorFB"
                android:textAlignment="center"
                app:icon="@drawable/apple"
                app:iconGravity="textStart"
                android:layout_below="@id/tvForgetPassword"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sign_in_fb"
                android:textAllCaps="false"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAppleLogin"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="21dp"
            app:cornerRadius="10dp"
            android:textAlignment="center"
            android:backgroundTint="@color/black"
            android:layout_below="@id/btnFBLogin"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in_with_apple"
            android:layout_marginBottom="15dp"
            app:iconPadding="25dp"
            app:icon="@drawable/apple"
            app:iconGravity="textStart"
            android:textAllCaps="false" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>