<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorHomeBackground">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvPatientDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="15dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPatientDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:itemCount="3"
                    android:paddingTop="25dp"
                    android:paddingBottom="28dp"
                    android:paddingStart="27dp"
                    android:paddingEnd="23dp"
                    tools:listitem="@layout/patient_detail_items"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tvDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cvPatientDetail"
                android:textSize="16sp"
                android:layout_marginTop="9dp"
                android:textColor="@color/colorDialogText"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_dob"/>
            <LinearLayout
                android:id="@+id/llDob"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_below="@id/tvDob">
                <EditText
                    android:id="@+id/etDay"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:drawablePadding="32dp"
                    android:paddingEnd="14dp"
                    android:paddingStart="14dp"
                    android:textAlignment="center"
                    android:text="30"
                    android:textColor="@color/colorDialogText"
                    android:drawableEnd="@drawable/ios_arrow_dropdown"
                    android:background="@drawable/rounded_edit_text"
                    android:backgroundTint="@color/white"/>
                <EditText
                    android:id="@+id/etMonth"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:drawablePadding="32dp"
                    android:paddingEnd="14dp"
                    android:textColor="@color/colorDialogText"
                    android:paddingStart="14dp"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:text="Dec"
                    android:drawableEnd="@drawable/ios_arrow_dropdown"
                    android:background="@drawable/rounded_edit_text"
                    android:backgroundTint="@color/white"/>
                <EditText
                    android:id="@+id/etYear"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:drawablePadding="32dp"
                    android:paddingEnd="14dp"
                    android:paddingStart="14dp"
                    android:textAlignment="center"
                    android:text="1997"
                    android:textColor="@color/colorDialogText"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ios_arrow_dropdown"
                    android:background="@drawable/rounded_edit_text"
                    android:backgroundTint="@color/white"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_below="@id/llDob"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorDialogText"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_height"/>
            <EditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="25dp"
                android:textColor="@color/colorDialogText"
                android:backgroundTint="@color/white"
                android:background="@drawable/rounded_edit_text"
                android:layout_below="@id/tvHeight"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/tvHeightUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ft_unit"
                android:layout_below="@id/tvHeight"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/colorDialogText"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tvBloodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_below="@id/etHeight"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorDialogText"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_blood_type"/>
            <RadioGroup
                android:id="@+id/rdBloodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_below="@id/tvBloodType">
                <RadioButton
                    android:id="@+id/rbtnA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorDialogText"
                    android:text="@string/type_a"
                    android:layout_marginEnd="30dp"/>
                <RadioButton
                    android:id="@+id/rbtnB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorDialogText"
                    android:text="@string/type_b"
                    android:layout_marginEnd="30dp"/>
                <RadioButton
                    android:id="@+id/rbtnAB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/colorDialogText"
                    android:text="@string/type_ab"/>
                <RadioButton
                    android:id="@+id/rbtnO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorDialogText"
                    android:text="@string/type_o"/>
            </RadioGroup>
            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myan_pound"
                android:textColor="@color/colorDialogText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_medium"
                android:layout_below="@id/rdBloodType"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="25dp"
                android:textColor="@color/colorDialogText"
                android:backgroundTint="@color/white"
                android:background="@drawable/rounded_edit_text"
                android:layout_below="@id/tvWeight"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/tvWeightUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_unit"
                android:layout_below="@id/tvWeight"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/colorDialogText"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tvBloodPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myan_blood_pressure"
                android:textColor="@color/colorDialogText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_medium"
                android:layout_below="@id/etWeight"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/etBloodPressure"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="25dp"
                android:textColor="@color/colorDialogText"
                android:backgroundTint="@color/white"
                android:background="@drawable/rounded_edit_text"
                android:layout_below="@id/tvBloodPressure"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/tvBloodPressureUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mmhg_unit"
                android:layout_below="@id/tvBloodPressure"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/colorDialogText"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tvMedicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myan_medicine"
                android:textColor="@color/colorDialogText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_medium"
                android:layout_below="@id/etBloodPressure"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etMedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="@color/white"
                android:layout_below="@id/tvMedicine"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorDialogText"
                android:hint="@string/myan_bad_medicine"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:cornerRadius="10dp"
                android:fontFamily="@font/raleway_medium"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic__arrow_forward"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="36dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/etMedicine"
                android:text="@string/myan_continue"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>