<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivDialogPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/appt_confirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myan_confirm_consult"
        android:layout_below="@id/ivDialogPoster"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorGrayDark"
        android:fontFamily="@font/raleway_bold"
        android:textSize="19sp"/>
    <TextView
        android:id="@+id/tvDialogContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="သွားဖက်ဆိုင်ရာ ဆရာဝန်နှင့် တိုင်ပင်ဆွေးနွေးရန်Consultation Request ပြုလုပ်မှာ သေချာပါသလား ?"
        android:layout_below="@id/tvDialogTitle"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/raleway_medium"
        android:textSize="16sp"
        android:textColor="@color/colorDialogText"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDialogContent"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginBottom="42dp"
        android:layout_toStartOf="@id/btnConfirm"
        android:layout_alignTop="@id/btnConfirm"
        android:layout_alignBaseline="@id/btnConfirm"
        android:text="@string/myan_cancel"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myan_confirm"
        app:cornerRadius="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@id/tvDialogContent"
        android:fontFamily="@font/raleway_bold"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>