<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivConfirmPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/patient_case_saummary_confirmation"/>
            <TextView
                android:id="@+id/tvConfirmTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/raleway_bold"
                android:textSize="18sp"
                android:textColor="@color/colorGrayDark"
                android:layout_below="@id/ivConfirmPoster"
                android:text="@string/myan_confirm_detail"/>
            <TextView
                android:id="@+id/tvDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvConfirmTitle"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/raleway_bold"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="8dp"
                android:background="@drawable/rounded_text_view"
                android:text="@string/myan_patient_detail"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPatientDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:itemCount="3"
                android:layout_below="@id/tvDetailTitle"
                android:paddingTop="25dp"
                android:paddingBottom="28dp"
                android:paddingStart="27dp"
                android:paddingEnd="23dp"
                tools:listitem="@layout/patient_detail_items"/>
            <TextView
                android:id="@+id/tvSpecialityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvPatientDetail"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/raleway_bold"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="8dp"
                android:background="@drawable/rounded_text_view"
                android:text="@string/myan_speciality_question"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSpecialityQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:itemCount="1"
                tools:listitem="@layout/questions_items"
                android:layout_below="@id/tvSpecialityTitle"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirmRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                app:cornerRadius="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:layout_below="@id/rvSpecialityQuestion"
                android:text="@string/myan_make_request"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>